deploy/src/main/deploy/resource-descriptors/hono-service-device-registry/hono-service-device-registry-amqps-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: hono-service-device-registry
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-service-device-registry-amqps
spec:
  port:
    targetPort: 5671
  tls:
    termination: passthrough
  to:
    kind: Service
    name: hono-service-device-registry
