deploy/src/main/deploy/resource-descriptors/hono-service-device-registry/hono-service-device-registry-http-route.yaml
---
apiVersion: v1
kind: Route
metadata:
  labels:
    app: hono-service-device-registry
    version: "${project.version}"
    group: ${project.groupId}
  name: hono-service-device-registry-http
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hono-service-device-registry
